replacing angular by basic app

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           App 1
         </li>
       </a>
-      <a onclick="singleSpaNavigate('/app2')">
+      <a onclick="singleSpaNavigate('/stage-app')">
         <li>
-          App 2
+          Stage App
         </li>
       </a>
     </ul>
